Fixed bug where wrong borrower was put into active pool
Change-Id: I10e28aa69a0cfa99ca5f7527884d8ec0be522745